(PC-30258)[PRO] fix: Make ADAGE venue card names break when too long.

--- a/pro/src/pages/AdageIframe/app/components/AdageDiscovery/VenueCard/VenueCard.module.scss
+++ b/pro/src/pages/AdageIframe/app/components/AdageDiscovery/VenueCard/VenueCard.module.scss
@@ -65,6 +65,7 @@ $venue-image-width: rem.torem(276px);
   flex-direction: column;
   align-items: flex-start;
   gap: rem.torem(4px);
+  word-break: break-word;
 
   &-name {
     @include fonts.button;
